# GoldenCross-State-Maximization-Trading-Bot

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  buildspec.yml  config.py  docker-compose.yml  integration_backtest.py  main.py  pyproject.toml
backtest/: ccxt.py  config.py
src/core/: controller.py  data.py  db.py  logger.py  time.py  timeframe.py
src/signal/: base.py
src/signal/rebalance/: base.py  gcsm.py  golden_cross.py  qqsm.py  state_maximization.py
src/strategy/: base.py  rebalance.py
src/utils/: calc.py
src/utils/backtest/: backtest.py  data.py  em_weight.py  rand.py  runner.py
tests/qqsm/: ccxt.py  ccxt_copy.py  controller.py  test_strategy.py
